--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,13 @@
         }
     ],
     
-    "require": {
-
-    },
+  	"repositories" : [ 
+		{"type" : "composer", "url" : "https://packagist.org/"},
+  	],
+  
+  	"require": {
+		"symfony/yaml": "~2.0"
+	},
     
     "autoload": {
         "classmap" : [
