--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     
   	"repositories" : [ 
-		{"type" : "composer", "url" : "https://packagist.org/"},
+		{"type" : "composer", "url" : "https://packagist.org/"}
   	],
   
   	"require": {
