--- a/src/Conf/Base/Base.yml
+++ b/src/Conf/Base/Base.yml
@@ -3,6 +3,7 @@ conf:
     split_by_level: 1                 #日志是否按日志等级分文件
     split_by_hore: 1                  #每小时分割一份日志文件
     split_by_size: 1M                 #日志文件多大分割一份文件,支持M和G,例：100M | 10G.为0，不限制
+    is_compression: 1                 #是否压缩存储
     write_level: info                 #日志输出级别：debug->info->waring->error,大于等于输入的日志级别才会被写进日志文件(级别由左到右变大)
     is_syslog: 0                      #是否是syslog日志
     syslog_local: LOCAL0              #如果是syslog此参数才会生效
