--- a/src/Conf/Business/Business.yml
+++ b/src/Conf/Business/Business.yml
@@ -4,7 +4,7 @@ base:
     pid:            $fields[$key] = getmypid();
     memory:         $fields[$key] = round(memory_get_usage()/1024/1024, 3);
     level:          $fields[$key] = self::$level;
-    uri:            $fields[$key] = $_SERVER['DOCUMENT_URI'];
+    uri:            $fields[$key] = array_key_exists('DOCUMENT_URI', $_SERVER) ? $_SERVER['DOCUMENT_URI'] : $_SERVER['SCRIPT_NAME'];
     line:           $fields[$key] = self::$params['line'];
     file:           $fields[$key] = self::$params['file'];
     output:         $fields[$key] = self::$params['output'];
